--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
             </div>
             <div class="col">
-                <div class="panel panel-blue">
+                <div class="panel panel-blue" id="middle">
                     <h3>Union</h3>
                     <div class="container container-blue ">
                         <label for="inputarr1"> Enter Input-1 : </label>
@@ -161,7 +161,7 @@
 
             </div>
             <div class="col">
-                <div class="panel panel-dark">
+                <div class="panel panel-dark" id="middle">
                     <h1>Guess the Number <em>Game</em></h1>
                     <button onclick="startGame()" class="btn-big">Start Game</button>
 
