--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
                         <button class="btn btn-primary mt-3" onclick="performSetOperation('intersect')">Intersect</button>
                         <button class="btn btn-primary mt-3" onclick="performSetOperation('union')">Union</button>
+                        <div id="result2" class="mt-3"></div>
                     </div>
                 </div>
 
